Chat Alignment Fixes